--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,14 @@ obj
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tmp
-/out-tsc
+dist
+tmp
+out-tsc
 # Only exists if Bazel was run
-/bazel-out
+bazel-out
 
 # dependencies
-/node_modules
+node_modules
 
 # profiling files
 chrome-profiler-events*.json
@@ -20,7 +20,7 @@ speed-measure-plugin*.json
 
 # IDEs and editors
 .vs
-/.idea
+.idea
 .project
 .classpath
 .c9/
@@ -37,14 +37,14 @@ speed-measure-plugin*.json
 .history/*
 
 # misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
+.sass-cache
+connect.lock
+coverage
+libpeerconnection.log
 npm-debug.log
 yarn-error.log
 testem.log
-/typings
+typings
 
 # System Files
 .DS_Store
