Base de dados Sqlite e regras de negócio da API

--- a/GFT.Restaurant.Order.API/appsettings.Development.json
+++ b/GFT.Restaurant.Order.API/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Data Source=GFTRestaurantOrder.db"
     }
   }
 }
