--- a/GFT.Restaurant.Order.DAL/GFT.Restaurant.Order.DAL.csproj
+++ b/GFT.Restaurant.Order.DAL/GFT.Restaurant.Order.DAL.csproj
@@ -1,22 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.1">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GFT.Restaurant.Order.BLL\GFT.Restaurant.Order.BLL.csproj" />
-    <ProjectReference Include="..\GFT.Restaurant.Order.DAL\GFT.Restaurant.Order.DAL.csproj" />
+    <ProjectReference Include="..\GFT.Restaurant.Order.Interface\GFT.Restaurant.Order.Interface.csproj" />
     <ProjectReference Include="..\GFT.Restaurant.Order.Model\GFT.Restaurant.Order.Model.csproj" />
   </ItemGroup>
-
 
 </Project>
