--- a/GFT.Restaurant.Order.Interface/GFT.Restaurant.Order.Interface.csproj
+++ b/GFT.Restaurant.Order.Interface/GFT.Restaurant.Order.Interface.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GFT.Restaurant.Order.Model\GFT.Restaurant.Order.Model.csproj" />
+  </ItemGroup>
+
 </Project>
